Implemented Best practises 📚